--- a/styles.css
+++ b/styles.css
@@ -3,12 +3,14 @@
     border: none;
     cursor: pointer;
     font-size: 20px;
+    color: grey;
     margin-left: 10px;
-    color: white;
 }
+
 .starred {
-    color: silver;
+    color: gold;
 }
+
 li {
     background: #f9f9f9;
     padding: 10px;
